Настроил роутинг для всех страниц
Также:
- исправил подключение картинок;
- добавил логотип

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
 @import './btn.css';
 @import './link.css';
 @import './wrapper/wrapper.css';
+@import './logo.css';
 
 /* menu styles */
 @import './menu.css';
