--- a/styles/page/page.css
+++ b/styles/page/page.css
@@ -2,3 +2,22 @@
     display: block;
     min-height: calc(100vh - 120px);
 }
+
+/* @media screen and (max-width: 1280px) {
+    .page {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .page {
+        width: 95%;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .page {
+        width: 95%;
+    }
+} */
