--- a/styles/products/products.css
+++ b/styles/products/products.css
@@ -29,40 +29,43 @@
   justify-content: center;
   position: relative;
   gap: 30px;
-  margin: 60px auto;
+  margin: 60px 0;
+  padding: 0;
 }
 
 .product {
   width: 250px;
   height: 150px;
   border: 1px solid black;
+  justify-content: space-between;
 }
 
 .product__link_nastil {
-  background-image: url(../../picture/city-for-produts.png);
+  display: block;
 }
 
 
 .product__link_steps {
-  background-image: url(../../picture/lines-for-product.png);
+  display: block;
 }
 
 
 .product__link_fastener {
-  background-image: url(../../picture/metall-for-products.png);
+  display: block;
 }
 
 
 .title {
   text-align: center;
+  font-size: 23px;
 }
 
-.product__img {
-  width: 100px;
-  height: 100px;
+/* .product__img {
+  width: 80px;
+  height: 80px;
   object-fit: cover;
   object-position: top left;
-}
+} */
 
 .product__link {
   display: block;
@@ -72,6 +75,64 @@
 
 
 
-/* .products__picture {
+@media screen and (max-width: 768px) {
+  .products {
+    min-width: 760px;
 
-} */
+  }
+
+  .products__container {
+    min-width: 760px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+
+
+.products__title {
+  min-width: 760px;
+  display: block;
+  text-align: center;
+  }
+
+  .products__track {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+
+  }
+
+
+}
+
+@media screen and (max-width: 490px) {
+  .products__container {
+    min-width: 480px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+
+
+.products__title {
+  min-width: 480px;
+  display: block;
+  text-align: center;
+  }
+
+  .products__track {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+  }
+
+}
+
+
