--- a/styles/submenu.css
+++ b/styles/submenu.css
@@ -34,3 +34,16 @@
     flex-direction: column;
     gap: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .submenu {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    .submenu {
+        display: none;
+    }
+}
