--- a/styles/header.css
+++ b/styles/header.css
@@ -1,45 +1,167 @@
 .header {
-    background-color: #353434;
+  background-color: #353434;
 }
 
 .content {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding-top: 10px;
-
-    display: flex;
-    flex-direction: column;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
+.header__burger-btn {
+    display: none;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: orange;
+
+}
+
+.header__burger-btn span {
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: black;
+    left: 5px;
+    transition: transform .5s, opacity .5s, background-color .5s;
+
+}
+
+
+
+.header.open .header__burger-btn span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+
+}
+
+.header.open .header__burger-btn span:nth-child(2) {
+    opacity: 0;
+
+}
+
+.header.open .header__burger-btn span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
+
+}
+
+.header__burger-btn span:nth-child(1) {
+    transform: translateY(-10px);
+
+}
+
+.header__burger-btn span:nth-child(3) {
+    transform: translateY(10px);
+    
+}
+
+
+
 .header__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
 }
 
 .header__logo {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .header__contacts {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    
-    color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  color: white;
 }
 
 .header__contacts a {
-    color: white;
+  color: white;
 }
 
-@media screen and (max-width: 1280px) {
-    .content {
-        width: 95%;
-    }
+/* @media screen and (max-width: 1280px) {
+  .header {
+    flex: 0 0 25%;
+    min-width: 790px;
+  }
+
+  .content {
+    flex: 0 0 25%;
+    min-width: 790px;
 }
+
+  .header__inner {
+    flex: 0 0 25%;
+    min-width: 790px;
+  }
+} */
+
+@media screen and (max-width: 768px) {
+    .header__burger-btn {
+        display: block;
+        z-index: 2;
+        margin: 15px;
+    }
+
+    .header.open .menu__list {
+        transform: translateX(200%);
+
+    }
+
+    .content {
+        min-width: 760px;
+        margin: 0 auto;
+        padding-top: 10px;
+      
+        display: flex;
+        flex-direction: column;
+      }
+
+      .header__inner {
+        min-width: 480px;
+        display: block;
+        text-align: center;
+
+      }
+
+
+
+}
+
+@media screen and (max-width: 490px) {
+    .header__burger-btn {
+        display: block;
+        z-index: 2;
+    }
+
+    .header.open .menu__list {
+        transform: translateX(200%);
+
+    }
+
+    .content {
+        min-width: 480px;
+        margin: 0 auto;
+        padding-top: 10px;
+      
+        display: flex;
+        flex-direction: column;
+      }
+
+      .header__inner {
+        min-width: 480px;
+        display: block;
+        text-align: center;
+
+      }
+
+    
+}
+
