--- a/styles/logo.css
+++ b/styles/logo.css
@@ -13,3 +13,36 @@
     height: 100%;
     pointer-events: none;
 }
+
+
+@media screen and (max-width: 768px) {
+    .logo{
+            display: inline-block;
+            width: 70px;
+            height: 70px;
+
+    }
+
+    .logo__img {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .logo{
+            display: inline-block;
+            width: 35px;
+            height: 35px;
+
+    }
+
+    .logo__img {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+
+}
