--- a/styles/wrapper/wrapper.css
+++ b/styles/wrapper/wrapper.css
@@ -2,8 +2,9 @@
     width: 100%;
     min-height: 550px;
     background-image: url(../../picture/BG-city-for-wrapper.jpg);
+    background-repeat: no-repeat;
     display: flex;
-    background-size: contain;
+    background-size: 100% 100%;
 }
 
 .wrapper__container {
@@ -18,3 +19,5 @@
     font-size: 38px;
 
 }
+
+
