--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,6 @@
 .header {
   background-color: #353434;
+  background-color: rgba(var(--GeneralColor),0.5)
 }
 
 .content {
@@ -11,53 +12,45 @@
 }
 
 .header__burger-btn {
-    display: none;
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border: none;
-    background-color: orange;
-
+  display: none;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: #e86100;
 }
 
 .header__burger-btn span {
-    position: absolute;
-    width: 30px;
-    height: 3px;
-    background-color: black;
-    left: 5px;
-    transition: transform .5s, opacity .5s, background-color .5s;
-
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  left: 5px;
+  transition:
+    transform 0.5s,
+    opacity 0.5s,
+    background-color 0.5s;
 }
 
-
-
 .header.open .header__burger-btn span:nth-child(1) {
-    transform: translateY(0) rotate(45deg);
-
+  transform: translateY(0) rotate(45deg);
 }
 
 .header.open .header__burger-btn span:nth-child(2) {
-    opacity: 0;
-
+  opacity: 0;
 }
 
 .header.open .header__burger-btn span:nth-child(3) {
-    transform: translateY(0) rotate(-45deg);
-
+  transform: translateY(0) rotate(-45deg);
 }
 
 .header__burger-btn span:nth-child(1) {
-    transform: translateY(-10px);
-
+  transform: translateY(-10px);
 }
 
 .header__burger-btn span:nth-child(3) {
-    transform: translateY(10px);
-    
+  transform: translateY(10px);
 }
-
-
 
 .header__inner {
   display: flex;
@@ -79,89 +72,89 @@
   flex-direction: column;
   gap: 5px;
 
-  color: white;
+  color: #ff8c00;
 }
 
 .header__contacts a {
-  color: white;
+  color: #ff8c00;
 }
 
-/* @media screen and (max-width: 1280px) {
-  .header {
-    flex: 0 0 25%;
-    min-width: 790px;
+@media screen and (max-width: 768px) {
+  .header__burger-btn {
+    display: block;
+    z-index: 2;
+    margin: 15px;
+  }
+
+  .header.open .menu__list {
+    transform: translateX(200%);
   }
 
   .content {
-    flex: 0 0 25%;
-    min-width: 790px;
-}
+    min-width: 760px;
+    margin: 0 auto;
+    padding-top: 10px;
+
+    display: flex;
+    flex-direction: column;
+  }
 
   .header__inner {
-    flex: 0 0 25%;
-    min-width: 790px;
+    width: 760px;
+    display: block;
+    text-align: center;
   }
-} */
-
-@media screen and (max-width: 768px) {
-    .header__burger-btn {
-        display: block;
-        z-index: 2;
-        margin: 15px;
-    }
-
-    .header.open .menu__list {
-        transform: translateX(200%);
-
-    }
-
-    .content {
-        min-width: 760px;
-        margin: 0 auto;
-        padding-top: 10px;
-      
-        display: flex;
-        flex-direction: column;
-      }
-
-      .header__inner {
-        min-width: 480px;
-        display: block;
-        text-align: center;
-
-      }
-
-
-
 }
 
 @media screen and (max-width: 490px) {
+  .header__burger-btn {
+    display: block;
+    z-index: 2;
+  }
+
+  .header.open .menu__list {
+    transform: translateX(200%);
+  }
+
+  .content {
+    margin: 0 auto;
+    padding-top: 10px;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header__inner {
+    width: 490px;
+    display: block;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 390px) {
     .header__burger-btn {
         display: block;
         z-index: 2;
-    }
+      }
 
-    .header.open .menu__list {
+      .header.open .menu__list {
         transform: translateX(200%);
+      }
 
-    }
-
-    .content {
-        min-width: 480px;
+      .content {
         margin: 0 auto;
         padding-top: 10px;
-      
+    
         display: flex;
         flex-direction: column;
       }
 
       .header__inner {
-        min-width: 480px;
         display: block;
         text-align: center;
-
+        width: 390px;
       }
 
-    
+
 }
 
