--- a/styles/logo.css
+++ b/styles/logo.css
@@ -31,7 +31,23 @@
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 490px) {
+    .logo{
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+
+    }
+
+    .logo__img {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+
+}
+
+@media screen and (max-width: 390px) {
     .logo{
             display: inline-block;
             width: 35px;
