--- a/styles/products/products.css
+++ b/styles/products/products.css
@@ -1,6 +1,6 @@
 .products {
   width: 100%;
-  min-height: 550px;
+  min-height: 400px;
   padding: 40px 0;
   background-image: linear-gradient(#d7d7d7, #353535);
 }
@@ -44,16 +44,13 @@
   display: block;
 }
 
-
 .product__link_steps {
   display: block;
 }
 
-
 .product__link_fastener {
   display: block;
 }
-
 
 .title {
   text-align: center;
@@ -73,55 +70,40 @@
   height: 150px;
 }
 
-
-
 @media screen and (max-width: 768px) {
-  .products {
-    min-width: 760px;
-
-  }
-
   .products__container {
-    min-width: 760px;
+    width: 760px;
     margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
   }
-  
 
-
-.products__title {
-  min-width: 760px;
-  display: block;
-  text-align: center;
+  .products__title {
+    width: 760px;
+    display: block;
+    text-align: center;
   }
 
   .products__track {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 250px;
-
   }
-
-
 }
 
 @media screen and (max-width: 490px) {
   .products__container {
-    min-width: 480px;
+    width: 480px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
   }
 
-
-.products__title {
-  min-width: 480px;
-  display: block;
-  text-align: center;
+  .products__title {
+    width: 480px;
+    display: block;
+    text-align: center;
   }
 
   .products__track {
@@ -129,10 +111,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-
   }
-
 }
 
+@media screen and (max-width: 390px) {
+  .products__container {
+    width: 390px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
+  .products__title {
+    width: 390px;
+    display: block;
+    text-align: center;
+  }
+
+  .products__track {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
