--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,7 @@
   height: 40px;
   border: none;
   background-color: #e86100;
+  border-radius: 20%;
 }
 
 .header__burger-btn span {
@@ -83,7 +84,7 @@
   .header__burger-btn {
     display: block;
     z-index: 2;
-    margin: 15px;
+    margin: 11px;
   }
 
   .header.open .menu__list {
@@ -118,7 +119,7 @@
 
   .content {
     margin: 0 auto;
-    padding-top: 10px;
+    padding-top: 0;
 
     display: flex;
     flex-direction: column;
