--- a/styles/menu.css
+++ b/styles/menu.css
@@ -16,8 +16,7 @@
     display: inline-block;
     box-sizing: border-box;
     position: relative;
-    
-    color: #ff8c00;
+    color: black;
 }
 
 
@@ -56,7 +55,7 @@
         width: 170px;
         height: 270px;
         padding: 60px 20px 5px 20px;
-        background-color: orange;
+        background-color: none;
 
     }
 
@@ -73,12 +72,15 @@
         display: block;
         position: absolute;
         left: -320px;
-        top: 0;
+        top: 3px;
         width: 140px;
         height: 200px;
         transition: transform .5s;
-        background-color: orange;
+        background-color: #d3d3d3;
+        opacity: 0.6;
         padding: 50px 10px 10px 10px;
+        border-radius: 10%;
+
 
     }
 
