--- a/styles/footer.css
+++ b/styles/footer.css
@@ -51,6 +51,7 @@
     line-height: 10px;
     color: white;
     padding: 0 auto;
+    gap: 8px;
 }
 
 .footer__link {
@@ -99,6 +100,7 @@
         display: flex;
         text-align: right;
         margin-top: 10px;
+        gap: 8px;
 
     }
 
@@ -148,6 +150,7 @@
         display: flex;
         text-align: right;
         margin-top: 10px;
+        gap: 8px;
 
     }
 
