--- a/styles/products.css
+++ b/styles/products.css
@@ -9,21 +9,20 @@
   width: 720px;
   margin: 0 auto;
   padding: 0;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 .products__title {
   font-size: 30px;
   font-weight: 600;
-  justify-content: center;
+  text-align: center;
   margin: 0 auto;
   position: relative;
 }
 
 .products__track {
-  width: 460;
-  height: 400;
+  height: 400px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -38,8 +37,10 @@
   height: 150px;
   border: 1px solid black;
   justify-content: space-between;
+  
 }
 
+/* FIXME */
 .product__link_nastil {
   display: block;
 }
@@ -52,7 +53,9 @@
   display: block;
 }
 
-.title {
+.product__title {
+  margin: 0;
+  margin-top: 10px;
   text-align: center;
   font-size: 23px;
 }
