--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
     height: 140px;
-    background-color: #353434;
+    background-color: #808080;
     display: flex;
     flex-direction: column;
 }
@@ -15,15 +15,16 @@
 
 .footer__logo {
     display: inline-block;
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .footer__map {
-    font-style: normal;
     font-size: small;
-    color: orange;
+    color: white;
+    margin-left: 25px;
 
 
 }
