На главной странице в разделе продукты разместила картинки, сделала страничку с услкгами, но там два косяка, которые никак не могу исправить(блоки не поцентру и проблема с надписями, так как разместить их на изображения я смогла только абсолютным позиционированием,и теперь они при прокручивание страницы они убого себя ведут(

--- a/styles/normalized.css
+++ b/styles/normalized.css
@@ -82,6 +82,10 @@ a {
   background-color: transparent;
 }
 
+li {
+  list-style-type: none;
+}
+
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
