--- a/styles/header.css
+++ b/styles/header.css
@@ -3,9 +3,7 @@
   background-color: rgba(var(--GeneralColor),0.5)
 }
 
-.content {
-  max-width: 1280px;
-  margin: 0 auto;
+.header__content {
   padding-top: 10px;
   display: flex;
   flex-direction: column;
