исправила блокпродуктов и страницу с услугами, фото переименовала, лишнюю папаку убрала

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,12 +22,11 @@
 @import './page.css';
 @import './products.css';
 @import './footer.css';
-@import './services/services.css';
+@import './services.css';
 
 
 body {
     font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
 } 
 
 a {
@@ -37,6 +36,10 @@ a {
 
 .hidden {
     display: none;
+}
+
+li {
+list-style-type: none;
 }
 
 
