--- a/styles/products.css
+++ b/styles/products.css
@@ -57,38 +57,37 @@
 }
 
 
-.product__img1 {
-  width: 300px;
-  height: 200px;
+.product__img {
+  width: 100px;
+  height: 100px;
   position: absolute;
-  left: -350px;
-  top: 420px;
 
 }
-
-.product__img2 {
+.product__img_img1 {
   width: 250px;
-  height: 100px;
-  position: absolute;
-  top: 460px;
-  left: 800px;
-}
-
-.product__img3 {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 100px;
+  height: 150px;
   left: -350px;
+  top: 440px;
+
 }
 
-.product__img4 {
-  width: 100px;
-  height: 100px;
-  position: absolute;
+.product__img_img2 {
+  width: 150px;
   left: 730px;
   top: 210px;
+}
 
+.product__img_img3 {
+  width: 220px;
+  top: 400px;
+  left: 300px;
+}
+
+.product__img_img4 {
+  width: 250px;
+  height: 100px;
+  top: 460px;
+  left: 800px;
 }
 
 
