--- a/styles/wrapper.css
+++ b/styles/wrapper.css
@@ -1,7 +1,7 @@
 .wrapper {
     width: 100%;
     height: 550px;
-    background-image: url("../picture/mainbg.jpg");
+    background-image: url("/mainbg.jpg");
     background-color: #838996;
     background-repeat: no-repeat;
     display: flex;
