сделала страничку о компании

--- a/styles/index.css
+++ b/styles/index.css
@@ -30,6 +30,7 @@
 @import './contacts.css';
 @import './footer.css';
 @import './services.css';
+@import './about.css';
 
 
 body {
@@ -47,6 +48,10 @@ a {
 
 li {
 list-style-type: none;
+}
+
+p {
+    margin: 0;
 }
 
 
