исправила все замечания, также добавила класс к тегу ли, так как до этого было, что все стиль применялся ко всем спискам

--- a/styles/about.css
+++ b/styles/about.css
@@ -36,10 +36,11 @@
   margin: 10px auto 0;
 }
 
-li::before {
+
+.li__about::before {
   content: "	►";
-  color: #ff8c00;
   line-height: 2;
+  color: var(--color-orange);
 }
 
 
