Исправил путь до файла services.css

--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@
 @import './products.css';
 @import './contacts/contacts.css';
 @import './footer.css';
-@import './services.css';
+@import './services/services.css';
 @import './about.css';
 
 
