--- a/styles/servicesProject.css
+++ b/styles/servicesProject.css
@@ -1,47 +1,41 @@
-
 .servicesProject__container {
-    width: 100%;
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
-
-
+  width: 100%;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.services__block {
-    width: 720px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: 1px grey solid;
+.servicesBlock {
+  width: 720px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px grey solid;
 }
 
 .servicesBlock__title {
-    display: block;
-    height: 60px;
-    font-size: 25px;
-    font-weight: 300;
-    background-color: var(--color-orange);
-    text-align: center;
-    padding-top: 20px;
-
+  display: block;
+  height: 60px;
+  font-size: 25px;
+  font-weight: 300;
+  background-color: var(--color-orange);
+  text-align: center;
+  padding-top: 20px;
 }
 
 .servicesBlock__description {
-    display: block;
-    height: 100px;
-    font-size: 20px;
-    font-weight: 200;
-    text-align: start;
-    padding-top: 20px;
+  display: block;
+  height: 100px;
+  font-size: 20px;
+  font-weight: 200;
+  text-align: start;
+  padding-top: 20px;
 }
 
-.li__about::before {
-    content: "	►";
-    line-height: 2.5;
-    color: var(--color-orange);
-  }
-
+.servicesBlock__description_marker::before {
+  content: "	►";
+  line-height: 2.5;
+  color: var(--color-orange);
+}
