--- a/styles/products.css
+++ b/styles/products.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 530px;
   padding: 40px 0;
-  background-image: white3;
+  background-image: white;
 }
 
 .products__container {
