--- a/styles/main-products/products.css
+++ b/styles/main-products/products.css
@@ -2,7 +2,10 @@
   width: 100%;
   height: 530px;
   padding: 40px 0;
-  background-image: white;
+  background-image: url("./mainphoto_products.png");
+  background-repeat: no-repeat;
+  display: flex;
+  background-size: 100% 100%;
 }
 
 .products__container {
@@ -14,8 +17,8 @@
 }
 
 .products__title {
-  font-size: 30px;
-  font-weight: 600;
+  font-size: 37px;
+  font-weight: 700;
   text-align: center;
   margin: 0 auto;
   position: relative;
@@ -33,8 +36,8 @@
 }
 
 .product {
-  width: 250px;
-  height: 150px;
+  width: 270px;
+  height: 170px;
   border: 1px solid black;
   justify-content: space-between;
   
@@ -43,22 +46,64 @@
 
 .product__title {
   margin: 0;
-  margin-top: 10px;
-  text-align: center;
-  font-size: 23px;
-  color: black;
+  font-size: 26px;
+  font-weight: 700;
+  z-index: 1;
+  /* padding: 0 0 15px 60px; */
 }
 
+
+/* .product__link {
+  display: block;
+  width: 270px;
+  height: 170px;
+} */
 
 .product__link {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  width: 270px;
+  height: 170px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+}
+
+.product__link:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   display: block;
-  width: 250px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+
+}
+
+
+.product__link_nastil {
+  background-image: url("./main_nastil.jpg");
+  background-size: 100% 100%;
+}
+
+.product__link_steps {
+  background-image: url("./main_steps.jpg");
+  background-size: 100% 100%;
+}
+
+.product__link_fasteners {
+  background-image: url("./main_fasteners.jpg");
+  background-size: 100% 100%;
 }
 
 
 
-.product__img {
+
+
+/* .product__img {
   width: 100px;
   height: 100px;
   position: absolute;
@@ -103,7 +148,7 @@
   height: 150px;
   top: 460px;
   left: 780px;
-}
+} */
 
 
 @media screen and (max-width: 768px) {
