--- a/styles/index.css
+++ b/styles/index.css
@@ -35,9 +35,18 @@
 @import './servecesDelivery.css';
 
 
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+    height: 100%;
 } 
+
+#content {
+    min-height: 100%;
+}
 
 a {
     text-decoration: none;
