--- a/styles/services/services.css
+++ b/styles/services/services.css
@@ -29,6 +29,8 @@
   height: 320px;
   align-items: flex-end;
   position: relative;
+  padding: 0 0 10px 7px;
+  box-sizing: border-box;
 }
 
 .services__link:after {
@@ -58,5 +60,4 @@
   font-size: 20px;
   color: white;
   z-index: 1;
-  padding: 0 0 10px 7px;
 }
