--- a/styles/services/services.css
+++ b/styles/services/services.css
@@ -21,19 +21,25 @@
   padding: 0;
 }
 
-.services__link {
-  color: white;
-  text-decoration: none;
-  display: flex;
+.services__item {
+  list-style: none;
   width: 360px;
-  height: 320px;
-  align-items: flex-end;
-  position: relative;
-  padding: 0 0 10px 7px;
-  box-sizing: border-box;
+  height: 100%;
 }
 
-.services__link:after {
+.services__link {
+  color: white;
+  /* text-decoration: none; */
+  /* display: flex; */
+  /* width: 360px; */
+  /* height: 320px; */
+  /* align-items: flex-end; */
+  /* position: relative; */
+  /* padding: 0 0 10px 7px; */
+  /* box-sizing: border-box; */
+}
+
+/* .services__link:after {
   content: "";
   position: absolute;
   top: 0;
@@ -42,7 +48,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
-}
+} */
 
 .services__link_project {
   background-image: url("./project.jpg");
