исправила странички с услугами и поменяла фото на главной в продуктах

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,7 @@
 @import './footer.css';
 @import './services/services.css';
 @import './about.css';
-@import './servicesProject.css';
+@import './servicesProject/servicesProject.css';
 @import './servecesDelivery.css';
 
 
