--- a/styles/servicesProject/servicesProject.css
+++ b/styles/servicesProject/servicesProject.css
@@ -1,37 +1,53 @@
+
+
 .servicesProject__container {
   width: 100%;
-  height: 400px;
+  height: 700px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-image: url('./photo_services_project.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
-.servicesBlock {
+.servicesProject__title {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: 200px;
+
+}
+
+.servicesProject__block {
   width: 720px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 1px grey solid;
+  /* border: 1px grey solid; */
 }
-
-.servicesBlock__title {
+/* .servicesBlock__title {
   display: block;
   height: 60px;
   font-size: 25px;
   font-weight: 300;
-  background-color: var(--color-orange);
   text-align: center;
   padding-top: 20px;
-}
+} */
 
-.servicesBlock__description {
+.servicesProject__description {
   display: block;
   height: 100px;
   font-size: 20px;
   font-weight: 200;
   text-align: start;
   padding-top: 20px;
+  position: absolute;
+  top: 250px;
 }
 
 .servicesBlock__description_marker::before {
