сделала примерный вид странички с производством и изменила доставку

--- a/styles/index.css
+++ b/styles/index.css
@@ -33,6 +33,7 @@
 @import './about.css';
 @import './servicesProject/servicesProject.css';
 @import './servecesDelivery.css';
+@import './manufacture.css';
 
 
 html {
