--- a/styles/manufacture.css
+++ b/styles/manufacture.css
@@ -17,7 +17,7 @@
     font-size: 30px;
     line-height: 30px;
     text-align: center;
-    margin: 0;
+    margin: 0 0 30px 0;
 }
 
 .manufacture-video {
@@ -29,12 +29,19 @@
 
 }
 
+.video {
+    width: 100%;
+    height: auto; 
+    display: block;
+    max-width: 500px;
+}
+
 .manufacture__gallery {
     display: flex;
     flex-direction: row;
     width: 70%;
     justify-content: space-between;
-    margin: 60px 0 60px 0;
+    margin: 0px 0 60px 0;
 
 }
 
