--- a/styles/manufacture.css
+++ b/styles/manufacture.css
@@ -17,7 +17,7 @@
     font-size: 30px;
     line-height: 30px;
     text-align: center;
-    margin: 0 0 30px 0;
+    margin: 10px 0 30px 0;
 }
 
 .manufacture-video {
@@ -36,12 +36,12 @@
     max-width: 500px;
 }
 
-.manufacture__gallery {
+.manufacture__fotos {
     display: flex;
     flex-direction: row;
     width: 70%;
     justify-content: space-between;
-    margin: 0px 0 60px 0;
+    margin: 0px 0 90px 0;
 
 }
 
@@ -49,3 +49,5 @@
     width: 200px;
     height: 200px;
 }
+
+
