--- a/styles/products/products.css
+++ b/styles/products/products.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 530px;
   padding: 40px 0;
+  margin-top: 60px;
   background-image: url("./mainphoto_products.png");
   background-repeat: no-repeat;
   display: flex;
@@ -17,10 +18,11 @@
 }
 
 .products__title {
-  font-size: 37px;
+  font-size: 40px;
   font-weight: 700;
   text-align: center;
   margin: 0 auto;
+  bottom: 40px;
   position: relative;
 }
 
@@ -71,7 +73,7 @@
 
 }
 
-.product__link:after {
+/* .product__link:after {
   content: "";
   position: absolute;
   top: 0;
@@ -81,7 +83,7 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
 
-}
+} */
 
 
 .product__link_nastil {
@@ -100,55 +102,6 @@
 }
 
 
-
-
-
-/* .product__img {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-
-}
-.product__img_img1 {
-  width: 270px;
-  height: 167px;
-  left: 200px;
-  top: 340px;
-
-}
-
-.product__img_img2 {
-  width: 150px;
-  left: 730px;
-  top: 210px;
-}
-
-.product__img_img3 {
-  width: 220px;
-    top: 460px;
-    left: -300px;
-}
-
-.product__img_img4 {
-  width: 250px;
-    height: 100px;
-    top: 10px;
-    left: 800px;
-}
-
-.product__img_img5 {
-  width: 250px;
-  height: 100px;
-  top: 260px;
-  left: -190px;
-}
-
-.product__img_img6 {
-  width: 280px;
-  height: 150px;
-  top: 460px;
-  left: 780px;
-} */
 
 
 @media screen and (max-width: 768px) {
