--- a/styles/steps.css
+++ b/styles/steps.css
@@ -1,9 +1,9 @@
-.press-nastil {
+.steps {
     width: 100%;
     padding-top: 50px;
  } 
 
-.press-nastil__container {
+.steps__container {
     width: 100%;
     padding: 0 15px 0 20px;
     display: flex;
@@ -13,7 +13,7 @@
     margin-bottom: 20px;
 }
 
-.press-nastil__title {
+.steps__title {
     font-weight: 600;
     font-size: 30px;
     line-height: 30px;
@@ -21,24 +21,33 @@
     margin: 30px 0 45px;
 }
 
-.press-nastil__img {
+.steps__img {
   justify-content: center;
   margin: 0 0 40px 0;
   object-fit: contain;
+
 }
 
-.press-nastil__description {
-    width: 100%;
+.steps__photos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.steps__description {
+    width: 90%;
     margin: 10px auto 0;
     text-align: center;
 }
 
-.press-nastil__text {
+.steps__text {
     text-align: start;
     width: 95%;
 }
 
-.press-nastil__text_marker::before {
+.steps__text_marker::before {
     content: "	►";
     line-height: 2;
     color: var(--color-orange);
