--- a/styles/manufacture.css
+++ b/styles/manufacture.css
@@ -20,6 +20,14 @@
     margin: 10px 0 30px 0;
 }
 
+.manufacture__subtitle{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    margin: 10px 0 30px 0;
+}
+
 .manufacture-video {
     display: flex;
     flex-direction: row;
@@ -48,6 +56,29 @@
 .manufacture__photo {
     width: 200px;
     height: 200px;
+    margin-bottom: 10px;
+}
+
+.manufacture__photo_variants{
+    width: 300px;
+    height: 300px;
+    margin-bottom: 10px;
+}
+
+.manufacture__variants{
+    width: 100%;
+    margin: 20px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.manufacture__marker::before {
+    content: "	►";
+    line-height: 2;
+    color: var(--color-orange);
 }
 
 
