--- a/styles/servicesProject/servicesProject.css
+++ b/styles/servicesProject/servicesProject.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: url("./photo_services_project.png");
+  background-image: url("./photoforpageservices.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
