--- a/styles/svarnoynastil/savernoynastil.css
+++ b/styles/svarnoynastil/savernoynastil.css
@@ -5,17 +5,17 @@
 
 .svarnoy-nastil__container {
     width: 100%;
-    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    padding: 0 15px 0 20px;
 }
 
 .svarnoy-nastil__title {
-    font-weight: 700;
-    font-size: 40px;
+    font-weight: 600;
+    font-size: 30px;
     line-height: 30px;
     text-align: center;
     margin: 0 0 45px;
@@ -28,14 +28,16 @@
 }
 
 .svarnoy-nastil__description {
-    text-align: start;
-    width: 80%;
-    margin: 10px auto 0;
     text-align: center;
+    width: 100%;
+    margin: 10px auto 0;
+
 }
 
 .svarnoy-nastil__text {
-    font-size: 20px;
+    text-align: start;
+    width: 95%;
+
 }
 
 .svarnoy-nastil__text_marker::before {
