исправление последних недочетов

--- a/styles/index.css
+++ b/styles/index.css
@@ -40,6 +40,7 @@
 @import './antislipnastil.css';
 @import './steps.css';
 @import './fastener.css';
+@import './certificates/certificates.css';
 
 html {
     height: 100%;
