--- a/styles/manufacture.css
+++ b/styles/manufacture.css
@@ -53,8 +53,34 @@
 
 }
 
+.manufacture__table{
+    border: 1px solid black;
+    width: 70%;
+    margin-top: 20px;
+}
+
+td {
+    border: 1px solid black;
+    text-align: center;
+ }
+
+ .manufacture__table_main {
+    border: 1px solid black;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+ }
+
 .manufacture__photo {
     width: 200px;
+    height: 200px;
+    margin-bottom: 10px;
+}
+
+.manufacture__photo_steps {
+    width: 400px;
     height: 200px;
     margin-bottom: 10px;
 }
@@ -64,7 +90,7 @@
     height: 300px;
     margin-bottom: 10px;
 }
-
+/* 
 .manufacture__variants{
     width: 100%;
     margin: 20px 0 0 0;
@@ -73,7 +99,7 @@
     justify-content: center;
     align-items: center;
 
-}
+} */
 
 .manufacture__marker::before {
     content: "	►";
